--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.12.0",
@@ -24,6 +27,7 @@
     "typescript": "5.0.2"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "prisma": "^4.12.0"
   }
 }
