--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
     "@types/react": "18.0.30",
     "@types/react-dom": "18.0.11",
     "eslint": "8.36.0",
-    "eslint-config-next": "13.2.4",
-    "next": "13.2.4",
+    "eslint-config-next": "^13.3.0",
+    "next": "^13.3.0",
     "next-auth": "^4.20.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-modal": "^3.16.1",
     "sass": "^1.60.0",
+    "sharp": "^0.32.0",
+    "swr": "^2.1.2",
     "typescript": "5.0.2"
   },
   "devDependencies": {
