--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
+    "@types/react-modal": "^3.13.1",
     "prisma": "^4.12.0"
   }
 }
