--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@types/react-dom": "18.0.11",
     "eslint": "8.36.0",
     "eslint-config-next": "^13.3.0",
+    "multer": "^1.4.5-lts.1",
     "next": "^13.3.0",
     "next-auth": "^4.20.1",
+    "next-connect": "^0.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
@@ -34,6 +36,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
+    "@types/multer": "^1.4.7",
     "@types/react-modal": "^3.13.1",
     "prisma": "^4.12.0"
   }
