--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "eslint": "8.36.0",
     "eslint-config-next": "^13.3.0",
     "multer": "^1.4.5-lts.1",
-    "next": "^13.3.0",
     "next-auth": "^4.20.1",
     "next-connect": "^0.13.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "next": "13.2.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
     "react-modal": "^3.16.1",
