--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "@types/react-dom": "18.0.11",
     "eslint": "8.36.0",
     "eslint-config-next": "^13.3.0",
+    "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
+    "next": "13.2.4",
     "next-auth": "^4.20.1",
     "next-connect": "^0.13.0",
-    "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
